--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "require": {
     "jeyroik/sm-plugin-on-failure": "2.1.1",
     "psr/container": "1.0.0",
-    "league/container": "3.3.1",
+    "league/container": "4.*",
     "mongodb/mongodb": "1.1.0",
     "jeyroik/extas-m": "2.2.4",
     "jeyroik/preg": "1.3.1"
